# factorminer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE-BUSL  LICENSING.md  README.md  ROADMAP.md  pyproject.toml  run_demo.py  run_phase2_benchmark.py
.claude-plugin/: marketplace.json
.github/: dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  metric_question.md  setup_data_help.md
.github/workflows/: ci.yml
data/: README.md  binance_crypto_5m.manifest.json
docs/: architecture.md  baselines.md  binance-reproduction.md  design-partner-pilot.md  evidence-protocol.md  faq.md  financial-services-integration.md  hosted-pilot.md  industry-benchmarking.md  july-2026-research-and-business-outlook.md  landscape-and-extensions.md  metrics.md  paper-claims.md  public-evidence-release.md  repo-audit.md  reproducibility.md  security.md
examples/public_evidence/: README.md  binance_spot_daily_2023_2024.lock.json  binance_spot_daily_2023_2024.yaml  ecb_fx_daily_2023_2024.lock.json  ecb_fx_daily_2023_2024.yaml
examples/quickstart/: README.md  quickstart.yaml  run_benchmark.sh  run_evaluation.sh  run_mock_mining.sh  run_real_data_shape.sh  sample_market_data.csv  validate-data.sh
examples/quickstart/expected/: artifacts.md
factorminer/: __init__.py  _lazy_exports.py  cli.py
factorminer/agent/: __init__.py  critic.py  debate.py  factor_generator.py  llm_interface.py  output_parser.py  prompt_builder.py  specialists.py
factorminer/application/: __init__.py  evidence_service.py  helix_generation.py  helix_validation.py  mining_budget.py  mining_reporting.py  research_knowledge.py  run_artifacts.py  runtime_context.py  validation_pipeline.py
factorminer/architecture/: __init__.py  _sealed_evaluator_panel.py  dataset_contract.py  dependence.py  evaluation_kernel.py  families.py  geometry.py  island_model.py  library_services.py  lifecycle.py  memory_policy.py  model_stage.py  paper_protocol.py  partner_review.py  phase2_services.py  prompt_context.py  research_absorption.py  research_extensions.py  research_planner.py  research_receipt.py  rft_export.py  sealed_joint_search.py  stages.py
factorminer/benchmark/: __init__.py  ablation.py  catalogs.py  contracts.py  datasets.py  frozen_evaluation.py  helix_benchmark.py  mining_runtime.py  partner_review.py  phase2_reporting.py  provenance.py  receipt.py  reporting.py  runners.py  runtime.py  runtime_contracts.py  speed.py  statistics.py
factorminer/cli/: __init__.py  __main__.py  analysis_commands.py  app.py  benchmark_commands.py  context.py  data_commands.py  hosted_commands.py  integration_commands.py  mining_commands.py  partner_review_commands.py  public_data_commands.py  receipt_commands.py  research_commands.py
factorminer/configs/: __init__.py  benchmark_full.yaml  binance_sample.yaml  default.yaml  demo_local.yaml  edgar_fundamentals_example.yaml  futures_continuous_example.yaml  helix_research.yaml  paper_repro.yaml  paper_repro_binance.yaml
factorminer/configs/mcp_sources/: ccxt_binance.yaml
factorminer/core/: __init__.py  canonicalizer.py  config.py  expression_tree.py  factor_library.py  helix_loop.py  library_io.py  loop_services.py  parser.py  provenance.py  ralph_loop.py  session.py  types.py
factorminer/data/: __init__.py  edgar_source.py  futures_source.py  loader.py  mcp_source.py  mock_data.py  preprocessor.py  public_archive.py  qlib_library.py  qlib_source.py  tensor_builder.py  validation.py
factorminer/domain/: __init__.py  dependence.py  evidence.py
factorminer/evaluation/: __init__.py  admission.py  backtest.py  capacity.py  causal.py  combination.py  correlation.py  cross_validation.py  crowding.py  decay.py  formula_sensitivity.py  industry_evidence.py  metrics.py  model_zoo.py  mrm_pack.py  pipeline.py  portfolio.py  regime.py  report_viewer.py  research.py  risk_portfolio.py  runtime.py  selection.py  significance.py  transaction_costs.py
factorminer/evaluation/evidence/: __init__.py  inference.py  models.py  portfolio.py  report.py  risk.py
factorminer/hosted/: __init__.py  mcp_server.py  models.py  service.py  store.py  worker.py
factorminer/mcp/: __init__.py  server.py
factorminer/memory/: __init__.py  defaults.py  embeddings.py  evolution.py  experience_memory.py  formation.py  kg_retrieval.py  knowledge_graph.py  memory_store.py  online_regime_memory.py  retrieval.py
factorminer/operators/: __init__.py  arithmetic.py  auto_inventor.py  c_backend.py  crosssectional.py  custom.py  gpu_backend.py  logical.py  neuro_symbolic.py  registry.py  regression.py  sandbox.py  smoothing.py  statistical.py  timeseries.py
factorminer/tests/: conftest.py  test_architecture.py  test_auto_inventor.py  test_benchmark.py  test_canonicalizer.py  test_capacity.py  test_cascade_routing.py  test_cli_analysis.py  test_cli_golden_path.py  test_cli_helix.py  test_cli_helpers.py  test_cli_validate_data.py  test_combination.py  test_cross_validation.py  test_crowding.py  test_data.py  test_debate.py  test_decay_and_telemetry.py  test_dependency_boundaries.py  test_economic_rationale.py  test_edgar_source.py  test_edit_aware_memory_policy.py  test_evaluation.py  test_evidence_pack.py  test_expression_tree.py  test_extensible_features.py  test_formula_sensitivity.py  test_futures_source.py  test_helix_loop.py  test_hosted_pilot.py  test_hybrid_retrieval.py  test_import_boundaries.py  test_industry_evidence.py  test_island_model.py  test_kg_memory_embedder_fix.py  test_knowledge_graph.py  test_library.py  test_lineage.py  test_llm_interface.py  test_llm_jump_gate.py  (+31 more)
factorminer/utils/: __init__.py  config.py  logging.py  reporting.py  tearsheet.py  visualization.py
integrations/factor-researcher/: README.md
managed-agent-cookbooks/factor-researcher/: README.md  agent.yaml
output/: factor_library.json  mining_batches.jsonl  session.json  session_log.json
output/checkpoint/: helix_state.json  library.json  loop_state.json  memory.json  session.json
scripts/: __init__.py  check.py  check_architecture.py  run_demo.py  run_phase2_benchmark.py
(+30 files in other folders)
