[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factorminer"
version = "0.1.0"
description = "LLM-powered quantitative factor mining with evolutionary search"
readme = "README.md"
# Dual-licensed: MIT for the core engine, BUSL-1.1 for the advanced research
# modules listed in LICENSING.md. See LICENSE, LICENSE-BUSL, LICENSING.md.
license = "MIT AND BUSL-1.1"
license-files = ["LICENSE", "LICENSE-BUSL"]
requires-python = ">=3.12"
authors = [
    {name = "FactorMiner Team"},
]
keywords = ["quantitative-finance", "factor-mining", "llm", "alpha-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "bottleneck>=1.4",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "click>=8.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
    "cupy-cuda12x; platform_system == 'Linux'",
]
llm = [
    "openai",
    "anthropic",
    "google-generativeai",
]
embeddings = [
    "sentence-transformers>=2.0",
    "faiss-cpu>=1.7",
]
research = [
    "networkx>=3.0",
    "statsmodels>=0.14.0",
    "sympy>=1.13",
]
ml = [
    "torch>=2.0",
    "xgboost>=2.0",
]
visualization = [
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tabulate>=0.9",
]
mcp = [
    "mcp>=1.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
all = [
    "cupy-cuda12x; platform_system == 'Linux'",
    "torch>=2.0",
    "openai",
    "anthropic",
    "google-generativeai",
    "sentence-transformers>=2.0",
    "faiss-cpu>=1.7",
    "networkx>=3.0",
    "statsmodels>=0.14.0",
    "sympy>=1.13",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tabulate>=0.9",
    "mcp>=1.2",
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
factorminer = "factorminer.cli:main"

[project.urls]
Homepage = "https://github.com/minihellboy/factorminer"
Repository = "https://github.com/minihellboy/factorminer"
Issues = "https://github.com/minihellboy/factorminer/issues"

[tool.setuptools.packages.find]
include = ["factorminer*"]
exclude = ["factorminer.tests*"]

[tool.setuptools.package-data]
"factorminer.configs" = ["*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    # Quant research code uses matrix notation such as M, T, X, and K.
    "N803",
    "N806",
    # Formula catalogs and LLM prompts are intentionally long string literals.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"scripts/run_demo.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["factorminer/tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
