[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factorminer"
version = "0.1.0"
description = "LLM-powered quantitative factor mining with evolutionary search"
readme = "README.md"
# Dual-licensed: MIT for the core engine, BUSL-1.1 for the advanced research
# modules listed in LICENSING.md. See LICENSE, LICENSE-BUSL, LICENSING.md.
license = "MIT AND BUSL-1.1"
license-files = ["LICENSE", "LICENSE-BUSL"]
requires-python = ">=3.12"
authors = [
    {name = "FactorMiner Team"},
]
keywords = ["quantitative-finance", "factor-mining", "llm", "alpha-research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "bottleneck>=1.4",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
    "scikit-learn>=1.9.0",
    "pyyaml>=6.0",
    "click>=8.4.2",
    "tqdm>=4.69.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.13.0",
    "cupy-cuda12x; platform_system == 'Linux'",
]
llm = [
    "openai",
    "anthropic",
    "google-generativeai",
]
embeddings = [
    "sentence-transformers>=5.6.0",
    "faiss-cpu>=1.14.3",
]
research = [
    "networkx>=3.0",
    "statsmodels>=0.14.0",
    "sympy>=1.13",
]
ml = [
    "torch>=2.13.0",
    "xgboost>=3.3.0",
]
visualization = [
    "matplotlib>=3.11.1",
    "seaborn>=0.12",
    "tabulate>=0.9",
]
mcp = [
    "mcp>=1.28.1",
]
dev = [
    "pytest>=9.1.1",
    "pytest-cov",
    "ruff",
    "mypy",
]
all = [
    "cupy-cuda12x; platform_system == 'Linux'",
    "torch>=2.13.0",
    "openai",
    "anthropic",
    "google-generativeai",
    "sentence-transformers>=5.6.0",
    "faiss-cpu>=1.14.3",
    "networkx>=3.0",
    "statsmodels>=0.14.0",
    "sympy>=1.13",
    "xgboost>=3.3.0",
    "matplotlib>=3.11.1",
    "seaborn>=0.12",
    "tabulate>=0.9",
    "mcp>=1.28.1",
    "pytest>=9.1.1",
    "pytest-cov",
    "ruff",
    "mypy",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
factorminer = "factorminer.cli:main"

[project.urls]
Homepage = "https://github.com/minihellboy/factorminer"
Repository = "https://github.com/minihellboy/factorminer"
Issues = "https://github.com/minihellboy/factorminer/issues"

[tool.setuptools.packages.find]
include = ["factorminer*"]
exclude = ["factorminer.tests*"]

[tool.setuptools.package-data]
"factorminer.configs" = ["*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    # Quant research code uses matrix notation such as M, T, X, and K.
    "N803",
    "N806",
    # Formula catalogs and LLM prompts are intentionally long string literals.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"scripts/run_demo.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["factorminer/tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
